# one_night_werewolf_ai

./: .gitignore  app.py  game.py  game_manager.py  llms.py  models.py  players.py  players_manager.py  project_resource.py  prompt_templates.py  prompts.py  pyproject.toml  role_actions.py  run.py  turn.py  utils.py
ai/: few_shot_examples.py  llm.py  prompt_templates.py
mechanics/: conversation.py  players.py  turn.py  vote.py
mechanics/utils/: fetch_data.py  role_actions.py
